--- a/views/educational_contract_views.xml
+++ b/views/educational_contract_views.xml
@@ -7,11 +7,25 @@
         <field name="model">educational.contract</field>
         <field name="arch" type="xml">
             <form>
+                <header>
+                    <button string="Crear factura" name="action_create_invoice" type="object" class="oe_highlight" attrs="{'invisible': [('has_invoice', '=', True)]}" />
+                </header>
                 <sheet>
+                    <div name="button_box" class="oe_button_box">
+                        <button name="action_open_invoice"
+                                class="oe_stat_button"
+                                icon="fa-bars"
+                                type="object"
+                                attrs="{'invisible': [('has_invoice', '=', False)]}"
+                                string="Factura">
+                        </button>
+                    </div>
                     <group>
                         <field name="name" />
                         <field name="student_id" />
-                        <field name="payment_status" />
+                        <field name="invoice_ids" invisible="1" />
+                        <field name="has_invoice" invisible="1"  />
+                        <field name="payment_status" attrs="{'invisible': [('has_invoice', '=', False)]}" />
                     </group>
                     <notebook>
                         <page name="subjects" string="Materias">
@@ -74,7 +88,8 @@
     <menuitem
         id="educational_contract_menu"
         name="Contratos de Matriculación"
-        sequence="10"/>
+        sequence="10"
+        web_icon="management_educational_contracts,static/description/odoo_icon.png" />
 
     <menuitem
         id="educational_contract_submenu"
