--- a/views/educational_subject_views.xml
+++ b/views/educational_subject_views.xml
@@ -21,6 +21,9 @@
             <field name="model">educational.subject</field>
             <field name="arch" type="xml">
                 <form>
+                    <header>
+                        <button string="Crear servicio" name="action_create_product" type="object" class="oe_highlight" attrs="{'invisible': [('product_id', '!=', False)]}" />
+                    </header>
                     <sheet>
                         <group>
                             <group string="Información General">
@@ -28,18 +31,34 @@
                                 <field name="code"/>
                                 <field name="active"/>
                             </group>
-                            <group string="Producto Asociado">
-                                <field name="product_id" 
-                                       context="{'default_type': 'service'}"
-                                       options="{'no_create': True, 'no_edit': True}"/>
+                            <group string="Servicio Asociado">
+                                <field name="product_id" options="{'no_create': True, 'no_edit': True}"/>
                             </group>
                         </group>
-                        
-                        <group>
-                            <group string="Descripción">
-                                <field name="description" nolabel="1" placeholder="Descripción detallada de la materia..."/>
-                            </group>
+                    
+                        <group string="Detalle">
+                            <field name="description" placeholder="Descripción detallada de la materia..."/>
                         </group>
+                        <notebook>
+                            <page name="professor_subject" string="Profesores">
+                                <field name="professor_subject_ids">
+                                    <tree editable="bottom" > 
+                                        <field name="name"/>
+                                        <field name="email"/>
+                                        <field name="phone"/>
+                                    </tree>
+                                </field>
+                            </page>
+                            <page name="student_subject" string="Estudiantes">
+                                <field name="student_subject_ids">
+                                    <tree editable="bottom" > 
+                                        <field name="name"/>
+                                        <field name="email"/>
+                                        <field name="phone"/>
+                                    </tree>
+                                </field>
+                            </page>
+                        </notebook>
                     </sheet>
                     
                     <!-- <div class="oe_chatter">
@@ -88,8 +107,11 @@
         </record>
 
         <!-- Menu Items -->
+        <menuitem id="menu_educational_subject_root" name="Materias" 
+                  parent="educational_contract_menu" sequence="20"/>
+
         <menuitem id="menu_educational_subject" name="Materias" 
-                  parent="educational_contract_menu" 
-                  action="action_educational_subject" sequence="20"/>
+            parent="menu_educational_subject_root" 
+            action="action_educational_subject" sequence="10"/>
     </data>
 </odoo>
